--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "typescript": "^5.7.3"
   }
 }
