--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 JWT_SIGNATURE = YOUR_JWT_SECRET
-MONGO_URI = YOUR_MONGO_DB_URL
+MONGO_URI = mongodb+srv://kartikgothwal28:KGSTQBATpT0J0Joa@cluster0.ejahxrh.mongodb.net/notes-app?retryWrites=true&w=majority&appName=Cluster0
 FRONTEND_DEV = http://localhost/3000
 FRONTEND = http://localhost/3000
 PORT=8080
