--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,10 @@
   "description": "The backend for notes app",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon ./src/index.ts",
+    "start": "node ./dist/index.js",
+    "build": "tsc",
+    "postbuild": "copyfiles -u 1 src/**/*.html src/**/*.css dist/"
   },
   "author": "Kartik Gothwak",
   "license": "ISC",
@@ -21,7 +23,14 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.5",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
