--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
