added the proper folder

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "preview-build": "npm run build && npm run start",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "vite preview"
   },
