changed the file to ts

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "node ./src/index.js",
-    "start:build": "node ./dist/index.js",
+    "start": "node ./src/index.ts",
+    "start:build": "node ./dist/index.ts",
     "build": "tsc",
     "postbuild": "copyfiles -u 1 src/**/*.html src/**/*.css dist/"
   },
