removed the .env

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "2.0.0",
   "description": "",
   "scripts": {
-    "init:server": "cd Backend && pnpm i",
-    "init:client": "cd Frontend && pnpm i",
-    "init:both": "concurrently \"pnpm init:server\" \"pnpm init:client\"",
-    "dev:server": "cd Backend && pnpm dev",
-    "dev:client": "cd Frontend && pnpm dev",
-    "dev": "concurrently \"pnpm dev:server\" \"pnpm dev:client\"",
-    "preview:client": "cd Frontend && pnpm build && pnpm start --port 3000",
-    "preview:server": "cd Backend && pnpm start",
-    "preview": "pnpm init:both && concurrently \"pnpm preview:server\" \"pnpm preview:client\""
+    "init:server": "cd Backend && npm i",
+    "init:client": "cd Frontend && npm i",
+    "init:both": "concurrently \"npm init:server\" \"npm init:client\"",
+    "dev:server": "cd Backend && npm dev",
+    "dev:client": "cd Frontend && npm dev",
+    "dev": "concurrently \"npm dev:server\" \"npm dev:client\"",
+    "preview:client": "cd Frontend && npm build && npm start --port 3000",
+    "preview:server": "cd Backend && npm start",
+    "preview": "npm init:both && concurrently \"npm preview:server\" \"npm preview:client\""
   },
   "keywords": [],
   "author": "Kartik Gothwal",
