--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.ts",
+    "start": "node src/index.js",
     "prestart": "npm run build"
   },
   "author": "Kartik Gothwal",
