--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,11 +4,9 @@
   "description": "The backend for notes app",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "prestart": "npm run build"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "author": "Kartik Gothwal",
   "license": "ISC",
