--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.7",
     "path": "^0.12.7"
