--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.7",
+    "morgan": "^1.10.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.5",
     "copyfiles": "^2.4.1",
     "nodemon": "^2.0.19",
