--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -8,8 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "typeRoots": ["./src/types", "./node_modules/@types"],
-
+    "typeRoots": ["./src/types", "./node_modules/@types", "./src"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
